style.css
*{
    font-family: Arial, FontAwesome;
}

/* width */
::-webkit-scrollbar {
    width: 10px;
    height: 99%;
}
  
  /* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 10px;
}
   
  /* Handle */
::-webkit-scrollbar-thumb {
    background: rgb(69, 62, 62); 
    border-radius: 10px;
}
  
  /* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #342f2f; 
}

body{
    margin: 0;
    background-color: #010100;
    color: #EBEBE3;
    height: 100vh;
    user-select: none;
}

.white-line{
    height: 100vh;
    width: 1px;
    background-color: white;
    position: fixed;
    margin-top: -20px;
    margin-left: 250px;
}

.cw{
    color: rgb(255, 255, 255);
}

.home-div{
    display: flex;
}

.side-bar{
    background-color: #010100;
    width: 250px;
    height: calc(100vh - 20px);
    padding-top:20px ;
    padding-right: 10px;
    overflow: hidden;
}

.logo-img{
    margin-left: 10px;
    margin-bottom: 30px;
}

.logo-img:hover{
    cursor: pointer;
}

.top-ul{
    list-style-type: none;
    overflow: hidden;
    padding: 0;
    margin-top: 30px;
    width: 249px;
    position: fixed;
    top: 0;
}

.top-ul a{
    text-decoration: none;
    color: white;
}

.side-li{
    width: calc(100% - 10px);
    margin: 3px;
    height: 50px;
    padding-left: 5px;
    display: flex;
    align-items: center;
    text-decoration: none;
    color: white;
    border: 1px solid #010100;
}

.side-li:hover{
    border:1px solid rgb(255, 255, 255);
    cursor: pointer;
}

.user-img-side{
    margin-right: 10px;
    border-radius: 50%;
    background: none;
}

i{  
    margin-right: 10px;
}

.content{
    width: calc(100% - 300px);
    background-color:#010100;
    display: flex;
    justify-content: center;
    padding-top: 10px;
}

.user-content{
    width: 500px;
    border-radius: 1%;
    height: fit-content;
    background-color: #2f2f2f;
    box-shadow: rgba(255, 255, 255, 0.372) 0px 1px 3px 0px, rgba(255, 255, 255, 0.412) 0px 0px 0px 1px;
}

.user{
    width: 100%;
    display: flex;
    align-items: center;
    position: relative;
}

.user-img{
    border-radius: 50%;
    margin-left: 10px;
    margin-right: 10px;
}

.reaction{
    position: relative;
    margin-left: 10px;
}

.content-img{
    margin-bottom: 10px;
}

#like-id{
    display: none;
}

.like-id:checked ~ .like-re{
    transition: 250ms;
    color: red;
}

.like-id:not(:checked) ~ .like-re{
    transition: 250ms;
    color: rgb(255, 255, 255);
}

.like-re{
    font-size: 17px;
}

.re:hover{
    cursor: pointer;
}

.comment-re{
    -webkit-transform:rotateY(180deg);
    -moz-transform:rotateY(180deg);
    -o-transform:rotateY(180deg);
   -ms-transform:rotateY(180deg);
   font-size: 17px;
}

.share-re{
    font-size: 17px;
}

#save-re{
    display: none;
}

.save-re2{
   position: absolute;
    right: 0;
    top: 0;
    font-size: 17px;
}

.save-re1{
    position: absolute;
    right: 0;
    font-size: 15px;
}

.save-re:checked ~ .save-re2{
    opacity: 1;
    transition: 1000ms;
}

.save-re:not(:checked) ~ .save-re2{
    opacity: 0;
    transition: 500ms;
}

.ellipsis{
    position: absolute;
    right: 20px;
    top: -8px;
    font-size: 15px;
}

.font-15{
    font-size: 14px;
}

.description-text{
    font-size: 12px;
    margin-left: 14px;
}

.des-time{
    margin-left: 14px;
}


.des-input{
    width: calc(100% - 12px);
    border: none;
    border-top: 0.5px solid white;
    outline: none;
    background-color: #2f2f2f;
    height: 30px;
    padding-left: 10px;
}

footer{
    position: fixed;
    bottom: 0;
}

